--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "deploy": "gh-pages -d dist",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "preview": "vite preview"
