--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "homepage": "https://clodoaldodantas.github.io/react-accordion/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
