--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "@vitest/coverage-c8": "^0.25.3",
+    "gh-pages": "^4.0.0",
     "jsdom": "^20.0.3",
     "sass": "^1.56.1",
     "typescript": "^4.6.4",
